scanner fully working, and search working, need to implement add fine and pay for fine.

--- a/app/src/main/res/drawable/card_3.xml
+++ b/app/src/main/res/drawable/card_3.xml
@@ -5,7 +5,7 @@
         android:radius="6dp"/>
 
     <solid
-        android:color="#FF6E40"/>
+        android:color="#C640FF"/>
 
     <!-- Gray shadow. -->
     <item android:left="5dp" android:top="7dp">
