--- a/app/src/main/res/layout/activity_crime_news.xml
+++ b/app/src/main/res/layout/activity_crime_news.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorBackground"
             android:padding="10dp"
-            android:text="DAILY CRIME NEWS"
+            android:text="DAILY NEWS"
             android:textAlignment="center"
             android:textColor="@color/colorTextPrimary"
             android:textSize="20sp"
@@ -66,7 +66,7 @@
         android:background="@android:color/white">
 
         <include
-            layout="@layout/main_nav_drawer"/>
+            layout="@layout/vehicle_owner_main_nav_drawer"/>
     </RelativeLayout>
 
 
