--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/colorBackground"
@@ -24,43 +25,77 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="410dp"
+                    android:layout_height="80dp">
+
+                    <TextView
+                        android:id="@+id/displayName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="4dp"
+                        android:gravity="center"
+                        android:text="Welcome To PTI!"
+                        android:textColor="@color/colorTextPrimary"
+                        android:textSize="17dp"
+                        android:textStyle="normal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.019"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/displayPoliceName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="4dp"
+                        android:text="First name"
+                        android:textColor="#494451"
+                        android:textSize="30sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/displayName" />
+
+                    <TextView
+                        android:id="@+id/displayPoliceLastName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginEnd="200dp"
+                        android:text="Last name"
+                        android:textColor="#494451"
+                        android:textSize="30sp"
+                        android:textStyle="normal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/displayPoliceName"
+                        app:layout_constraintTop_toBottomOf="@+id/displayName" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/police_MainProfile"
+                        android:layout_width="87dp"
+                        android:layout_height="75dp"
+                        android:src="@drawable/bill_gates"
+                        app:civ_border_color="#D3D3D3"
+                        app:civ_border_width="6dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.8"
+                        app:layout_constraintStart_toEndOf="@+id/textView13"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <TextView
-                    android:id="@+id/displayName"
+                    android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_margin="10dp"
-                    android:layout_marginLeft="15dp"
-                    android:gravity="center"
-                    android:text="Welcome To PTI"
-                    android:textColor="@color/colorTextPrimary"
-                    android:textSize="40sp"
-                    android:textStyle="bold"
-                    />
-
-<!--                <EditText-->
-<!--                    android:id="@+id/searchUser"-->
-<!--                    android:layout_width="385dp"-->
-<!--                    android:layout_height="50dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:background="@drawable/bg_input"-->
-<!--                    android:drawableStart="@drawable/person_search"-->
-<!--                    android:drawablePadding="5dp"-->
-<!--                    android:layout_margin="15dp"-->
-<!--                    android:hint="Search User..."-->
-<!--                    android:paddingStart="10dp"-->
-<!--                    android:textColorHint="@color/colorTextPrimary"-->
-<!--                    />-->
-
-                        <TextView
-                            android:id="@+id/textView7"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/colorTextPrimary"
-                            android:layout_margin="15dp"
-                            android:text="Useful Technologies" />
-
-
+                    android:layout_margin="15dp"
+                    android:text="Useful Technologies"
+                    android:textColor="@color/colorTextPrimary" />
 
                 <LinearLayout
                     android:id="@+id/featured_background"
@@ -149,7 +184,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
-                            android:text="Crime News"
+                            android:text="APB "
                             android:textColor="@color/colorTextPrimary"
                             android:gravity="center_horizontal"/>
                     </LinearLayout>
@@ -192,7 +227,7 @@
 
                 </ImageView>
 
-<!--                <RelativeLayout-->
+                <!--                <RelativeLayout-->
 <!--                    android:layout_width="match_parent"-->
 <!--                    android:layout_height="wrap_content"-->
 <!--                    android:layout_marginTop="20dp"-->
