--- a/app/src/main/res/layout/activity_search_data.xml
+++ b/app/src/main/res/layout/activity_search_data.xml
@@ -71,20 +71,19 @@
 
     </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/groupedList"
-            android:visibility="invisible"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="119dp"
+            android:background="@drawable/round_grey"
+            android:visibility="invisible">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/user_image"
+                android:id="@+id/user_imageSearch"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="36dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="20dp"
                 android:src="@drawable/ic_user_photo"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="2dp"
@@ -94,35 +93,35 @@
 
             <TextView
                 android:id="@+id/user_reg"
-                android:layout_width="266dp"
-                android:layout_height="21dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="36dp"
+                android:layout_width="284dp"
+                android:layout_height="22dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="20dp"
                 android:text="Car Reg"
                 android:textColor="@color/colorTextPrimary"
-                app:layout_constraintStart_toEndOf="@+id/user_image"
+                app:layout_constraintStart_toEndOf="@+id/user_imageSearch"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/user_insurance"
-                android:layout_width="267dp"
+                android:layout_width="286dp"
                 android:layout_height="23dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
+                android:textColor="@color/colorTextPrimary"
                 android:text="Insurance name"
-                android:textColor="@color/colorTextSubtitle"
-                app:layout_constraintStart_toEndOf="@+id/user_image"
+                app:layout_constraintStart_toEndOf="@+id/user_imageSearch"
                 app:layout_constraintTop_toBottomOf="@+id/user_reg" />
 
             <TextView
                 android:id="@+id/user_insuranceDate"
-                android:layout_width="268dp"
+                android:layout_width="285dp"
                 android:layout_height="21dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:text="Insurance Expire Date"
-                android:textColor="@color/colorTextSubtitle"
-                app:layout_constraintStart_toEndOf="@+id/user_image"
+                android:textColor="@color/colorTextPrimary"
+                app:layout_constraintStart_toEndOf="@+id/user_imageSearch"
                 app:layout_constraintTop_toBottomOf="@+id/user_insurance" />
 
 
