--- a/app/src/main/res/layout/activity_text_recognizer.xml
+++ b/app/src/main/res/layout/activity_text_recognizer.xml
@@ -28,7 +28,7 @@
             android:textColor="@color/colorTextPrimary"/>
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageScan"
             android:layout_width="320dp"
             android:layout_height="300dp"
             android:layout_gravity="center"
@@ -36,33 +36,34 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/ic_police_car" />
+            />
 
         <TextView
-            android:id="@+id/txtView"
+            android:id="@+id/displayText"
             android:layout_width="320dp"
-            android:layout_height="145dp"
+            android:layout_height="45dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="90dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp"
             android:textColor="@color/colorTextPrimary" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="5dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
+            android:padding="5dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="5dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="5dp">
 
                 <ImageButton
                     android:id="@+id/snapBtn"
@@ -77,8 +78,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="5dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="5dp">
 
                 <Button
                     android:id="@+id/detectBtn"
@@ -87,7 +88,88 @@
                     android:text="Detect Reg Number" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
+                <ImageButton
+                    android:id="@+id/search_btn003"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_search_user"
+                    android:background="@color/colorBackground"
+                    tools:ignore="VectorDrawableCompat" />
+            </LinearLayout>
+
+
+<!--            <Button-->
+<!--                android:id="@+id/testButton003"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="helo"/>-->
+
         </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/groupedList2"
+            android:layout_width="match_parent"
+            android:layout_height="119dp"
+            android:background="@drawable/round_grey"
+            android:visibility="invisible">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_imageSearch2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_user_photo"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="2dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/user_reg2"
+                android:layout_width="284dp"
+                android:layout_height="22dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="20dp"
+                android:text="Car Reg"
+                android:textColor="@color/colorTextPrimary"
+                app:layout_constraintStart_toEndOf="@+id/user_imageSearch2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/user_insurance2"
+                android:layout_width="286dp"
+                android:layout_height="23dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Insurance name"
+                android:textColor="@color/colorTextPrimary"
+                app:layout_constraintStart_toEndOf="@+id/user_imageSearch2"
+                app:layout_constraintTop_toBottomOf="@+id/user_reg2" />
+
+            <TextView
+                android:id="@+id/user_insuranceDate2"
+                android:layout_width="285dp"
+                android:layout_height="21dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:text="Insurance Expire Date"
+                android:textColor="@color/colorTextPrimary"
+                app:layout_constraintStart_toEndOf="@+id/user_imageSearch2"
+                app:layout_constraintTop_toBottomOf="@+id/user_insurance2" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     </LinearLayout>
