--- a/app/src/main/res/layout/activity_vehicle_owner_form.xml
+++ b/app/src/main/res/layout/activity_vehicle_owner_form.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_blue_gradient"
+    android:background="@drawable/ic_finger_print_authentication_background"
     tools:context=".VehicleOwnerForm">
 
     <View
@@ -19,16 +19,16 @@
 
     <TextView
         android:id="@+id/regTextView"
-        android:layout_width="369dp"
-        android:layout_height="57dp"
+        android:layout_width="306dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:text="Complete Registration"
-        android:textColor="#666666"
+        android:textColor="@color/colorTextPrimary"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
