--- a/app/src/main/res/layout/activity_vehicle_owner_main.xml
+++ b/app/src/main/res/layout/activity_vehicle_owner_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/colorBackground"
@@ -24,19 +25,70 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/displayName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_margin="10dp"
-                    android:layout_marginLeft="15dp"
-                    android:gravity="center"
-                    android:text="Welcome To PTI"
-                    android:textColor="@color/colorTextPrimary"
-                    android:textSize="40sp"
-                    android:textStyle="bold"
-                    />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="410dp"
+                    android:layout_height="80dp">
+
+                    <TextView
+                        android:id="@+id/displayName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
+                        android:text="Welcome To PTI!"
+                        android:textColor="@color/colorTextPrimary"
+                        android:textSize="17dp"
+                        android:textStyle="normal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/displayVehicleName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="First name"
+                        android:textColor="#494451"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/displayName" />
+
+                    <TextView
+                        android:id="@+id/displayVehicleLastName"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/displayVehicleName"
+                        app:layout_constraintTop_toBottomOf="@+id/displayName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Last name"
+                        android:textColor="#494451"
+                        android:textSize="30sp"
+                        android:textStyle="normal"
+                        tools:layout_editor_absoluteX="104dp"
+                        tools:layout_editor_absoluteY="27dp" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/vehicle_MainProfile"
+                        app:civ_border_color="#D3D3D3"
+                        app:civ_border_width="6dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.8"
+                        app:layout_constraintStart_toEndOf="@+id/textView13"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0"
+                        android:layout_width="87dp"
+                        android:layout_height="75dp"
+                        android:src="@drawable/bill_gates"
+                        tools:layout_editor_absoluteX="288dp"
+                        tools:layout_editor_absoluteY="3dp" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:id="@+id/textView7"
@@ -133,7 +185,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
-                            android:text="Crime News"
+                            android:text="Daily News"
                             android:textColor="@color/colorTextPrimary"
                             android:gravity="center_horizontal"/>
                     </LinearLayout>
