--- a/app/src/main/res/layout/vehicle_owner_main_nav_drawer.xml
+++ b/app/src/main/res/layout/vehicle_owner_main_nav_drawer.xml
@@ -129,13 +129,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="ClickVehicleCrimeNews">
+        android:onClick="ClickCrimeNews">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Crime News"
+            android:text="Daily News"
             android:padding="12dp"
             android:textColor="@color/colorTextPrimary"
             android:layout_marginStart="16dp"/>
