--- a/app/src/main/res/layout/activity_vehicle_owner_main.xml
+++ b/app/src/main/res/layout/activity_vehicle_owner_main.xml
@@ -52,7 +52,7 @@
                         android:layout_marginStart="8dp"
                         android:text="First name"
                         android:textColor="#494451"
-                        android:textSize="30sp"
+                        android:textSize="25sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/displayName" />
@@ -67,26 +67,25 @@
                         android:layout_height="wrap_content"
                         android:text="Last name"
                         android:textColor="#494451"
-                        android:textSize="30sp"
+                        android:textSize="25sp"
                         android:textStyle="normal"
                         tools:layout_editor_absoluteX="104dp"
                         tools:layout_editor_absoluteY="27dp" />
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/vehicle_MainProfile"
-                        app:civ_border_color="#D3D3D3"
+                        android:layout_width="87dp"
+                        android:layout_height="75dp"
+                        android:layout_marginEnd="28dp"
+                        android:src="@drawable/bill_gates"
+                        app:civ_border_color="#636363"
                         app:civ_border_width="6dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.8"
                         app:layout_constraintStart_toEndOf="@+id/textView13"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0"
-                        android:layout_width="87dp"
-                        android:layout_height="75dp"
-                        android:src="@drawable/bill_gates"
-                        tools:layout_editor_absoluteX="288dp"
-                        tools:layout_editor_absoluteY="3dp" />
+                        app:layout_constraintVertical_bias="0.6" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -223,7 +222,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="65dp"
+                    android:layout_marginTop="55dp"
                     android:background="@drawable/ic_pay_online">
 
                 </ImageView>
